# ArduinoCore-zephyr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  boards.txt  platform.txt  programmers.txt  west.yml
.github/ISSUE_TEMPLATE/: compilation_bug_report.md  miscellaneous_bug_report.md  runtime_bug_report.md
.github/workflows/: build.yml  checkpatch.yml  commit_check.yml  format_check.yml  license_check.yml  package_core.yml
cores/: CMakeLists.txt
cores/arduino/: Arduino.h  CMakeLists.txt  SerialUSB.h  USB.cpp  abi.cpp  api  itoa.cpp  main.cpp  new  new.cpp  overloads.h  threads.cpp  time_macros.h  usb_device_descriptor.c  zephyrCommon.cpp  zephyrSerial.cpp  zephyrSerial.h
extra/: bootstrap.sh  build.sh  build_all.sh  gen_arduino_files.cmake  gen_package_index_json.sh  gen_provides.py  get_board_details.sh  get_core_version.sh  get_variant_name.cmake  get_variant_name.sh  install_pyocd.sh  install_remoteocd.sh  package.lst  package.sh  package_core.exc  package_core.inc  package_core.sh  package_tool.sh  targets.json  zephyr-core-template.json
extra/artifacts/: _common.inc  _common.json  zephyr_contrib.json  zephyr_main.json  zephyr_unoq.json
extra/post_build_tool/: build.sh  go.mod  main.go
extra/sync-zephyr-artifacts/: .gitignore  README.md  go.mod  go.sum  main.go
extra/zephyr-sketch-tool/: .gitignore  README.md  go.mod
libraries/Ethernet/: library.properties
libraries/SPI/: SPI.cpp  SPI.h
libraries/SocketWrapper/: Ethernet.cpp  Ethernet.h  SocketHelpers.cpp  SocketHelpers.h  SocketWrapper.h  WiFi.cpp  WiFi.h  ZephyrClient.h  ZephyrSSLClient.h  ZephyrServer.h  ZephyrUDP.h
libraries/Wire/: Wire.cpp  Wire.h
loader/: CMakeLists.txt  bootanimation.h  fixups.c  llext_exports.c  main.c  matrix.inc  prj.conf
loader/blobs/: 4343WA1_bin.c  4343WA1_bin_qspi.c  CMakeLists.txt
loader/boards/: arduino_giga_r1_m7.conf  arduino_giga_r1_m7.overlay  arduino_nano_33_ble_sense.conf  arduino_nano_33_ble_sense.overlay  arduino_nicla_sense_me.conf  arduino_nicla_sense_me.overlay  arduino_portenta_c33.conf  arduino_portenta_c33.overlay  arduino_portenta_h7_m7.conf  arduino_portenta_h7_m7.overlay  ek_ra8d1.conf  ek_ra8d1.overlay  frdm_mcxn947_mcxn947_cpu0.conf  frdm_rw612.conf  frdm_rw612.overlay
samples/analog_input/: CMakeLists.txt
samples/attach_interrupt/: CMakeLists.txt
samples/blinky_arduino/: CMakeLists.txt
samples/button_press_led/: CMakeLists.txt
samples/fade/: CMakeLists.txt
samples/hello_arduino/: CMakeLists.txt
samples/i2cdemo/: CMakeLists.txt
samples/serial_event/: CMakeLists.txt
samples/spi_controller/: CMakeLists.txt
samples/threads_arduino/: CMakeLists.txt
variants/_ldscripts/: build-dynamic.ld  build-static.ld  dynamic.ld  memory-check.ld  memory-static.ld
variants/_linked/: linker_script.ld
variants/arduino_giga_r1_m7/: pure_analog_pins.h
variants/arduino_giga_r1_stm32h747xx_m7/: arduino_giga_r1_stm32h747xx_m7.conf  arduino_giga_r1_stm32h747xx_m7.overlay  pure_analog_pins.cpp  pure_analog_pins.h  variant.h
variants/arduino_nano_33_ble_nrf52840_sense/: arduino_nano_33_ble_nrf52840_sense.conf  arduino_nano_33_ble_nrf52840_sense.overlay  variant.cpp  variant.h
variants/arduino_nano_33_ble_sense/: variant.cpp  variant.h
variants/arduino_nano_matter_mgm240sd22vna/: variant.h  (+2 more)
(+56 files in other folders)
